--- a/views/index.erb
+++ b/views/index.erb
@@ -6,12 +6,14 @@
 <body>
 <h1>お問合せ</h1>
 <form action="#" method="post">
-	<p>お名前（必須）：<br>
+	<p>名前<br>
 	<input type="text" name="name"></p>
-	<p>メールアドレス：<br>
-	<input type="text" name="mail"></p>
-	<p>お問合せ内容：<br>
+	<p>日付<br>
+	<input type="text" name="day"></p>
+	<p>時間<br>
+	<input type="text" name="time"></p>
+	<p>備考欄<br>
 	<textarea name="comment" cols="30" rows="5"></textarea></p>
-	<p><input type="submit" value="確認する"></p>
+	<p><input type="submit" value="送信"></p>
 </form>
 </body>
