--- a/views/index.erb
+++ b/views/index.erb
@@ -4,7 +4,7 @@
 <title>HTML入門-フォームの作成</title>
 </head>
 <body>
-<h1>お問合せ</h1>
+<h1>シフト申告</h1>
 <form action="#" method="post">
 	<p>名前<br>
 	<input type="text" name="name"></p>
