--- a/views/index.erb
+++ b/views/index.erb
@@ -5,15 +5,31 @@
 </head>
 <body>
 <h1>シフト申告</h1>
-<form action="#" method="post">
-	<p>名前<br>
-	<input type="text" name="name"></p>
-	<p>日付<br>
-	<input type="text" name="day"></p>
-	<p>時間<br>
-	<input type="text" name="time"></p>
-	<p>備考欄<br>
-	<textarea name="comment" cols="30" rows="5"></textarea></p>
-	<p><input type="submit" value="送信"></p>
+<!-- <form action="#" method="post"> -->
+        <!-- <p>名前<br> -->
+        <!-- <input type="text" name="name"></p> -->
+        <!-- <p>日付<br> -->
+        <!-- <input type="text" name="day"></p> -->
+        <!-- <p>時間<br> -->
+        <!-- <input type="text" name="time"></p> -->
+        <!-- <p>備考欄<br> -->
+        <!-- <textarea name="comment" cols="30" rows="5"></textarea></p> -->
+        <!-- <p><input type="submit" value="送信"></p> -->
+  
+  <table border="1">
+    <tr>
+      <th>名前</th>
+      <th>年齢</th>
+    </tr>
+    <tr>
+      <td>田中</td>
+      <td>27</td>
+    </tr>
+    <tr>
+      <td>佐藤</td>
+      <td>42</td>
+    </tr>
+  </table>
+  
 </form>
 </body>
