--- a/views/index.erb
+++ b/views/index.erb
@@ -34,7 +34,7 @@
     </tr>
     <tr>
       <td>1</td>
-      <td></td>
+      <input type="button" value="黄色に変える" onclick="changeBoxColor('#ffff00')">
       <td></td>
       <td></td>
       <td></td>
