--- a/views/index.erb
+++ b/views/index.erb
@@ -8,6 +8,14 @@
 <body>
   
 <h1>シフト申告</h1>
+
+<div class="td" id="target"></div>
+<script>
+  document.getElementById('target').addEventListener('click', () = =>{
+      document.getElementById('target').style.background = 'red'
+  })
+</script>
+
   
   <table border="1">
     <tr>
@@ -490,6 +498,6 @@
 
     <p><input type="submit" value="送信"></p>
     
-  </table>
+    </table>
 </body>
 
