--- a/views/index.erb
+++ b/views/index.erb
@@ -31,9 +31,9 @@ function Click_Sub(obj) {
       <th>20-21</th>
       <th>21-22</th>
     </tr>
-    <tr onclick="Click_Sub(this)">
+    <tr>
       <td>1</td>
-      <td></td>
+      <td onclick="Click_Sub(this)"></td>
       <td></td>
       <td></td>
       <td></td>
