--- a/views/index.erb
+++ b/views/index.erb
@@ -2,40 +2,40 @@
   
 <head>
   <meta charset="utf-8">
-  <title>HTML入門-フォームの作成</title>
+  <title>シフト申告書</title>
 </head>
 
 <body>
 
-<select name="year">
-<option value="jan">2022年</option>
-<option value="feb">2023年</option>
-<option value="mar">2024年</option>
-<option value="apr">2025年</option>
-<option value="may">2026年</option>
-<option value="jun">2027年</option>
-<option value="jul">2028年</option>
-<option value="aug">2029年</option>
-<option value="sep">2030年</option>
-<option value="oct">2031年</option>
-<option value="nov">2032年</option>
-</select>
-<select name="month">
-<option value="jan">1月</option>
-<option value="feb">2月</option>
-<option value="mar">3月</option>
-<option value="apr">4月</option>
-<option value="may">5月</option>
-<option value="jun">6月</option>
-<option value="jul">7月</option>
-<option value="aug">8月</option>
-<option value="sep">9月</option>
-<option value="oct">10月</option>
-<option value="nov">11月</option>
-<option value="dec">12月</option>
-</select>
+  <h1>シフト申告書</h1>
 
-<h1>シフト申告</h1>
+  <select name="year">
+    <option value="jan">2022年</option>
+    <option value="feb">2023年</option>
+    <option value="mar">2024年</option>
+    <option value="apr">2025年</option>
+    <option value="may">2026年</option>
+    <option value="jun">2027年</option>
+    <option value="jul">2028年</option>
+    <option value="aug">2029年</option>
+    <option value="sep">2030年</option>
+    <option value="oct">2031年</option>
+    <option value="nov">2032年</option>
+  </select>
+  <select name="month">
+    <option value="jan">1月</option>
+    <option value="feb">2月</option>
+    <option value="mar">3月</option>
+    <option value="apr">4月</option>
+    <option value="may">5月</option>
+    <option value="jun">6月</option>
+    <option value="jul">7月</option>
+    <option value="aug">8月</option>
+    <option value="sep">9月</option>
+    <option value="oct">10月</option>
+    <option value="nov">11月</option>
+    <option value="dec">12月</option>
+  </select>
 
   <table id="data" class="table" border="1">
     <tr>
