--- a/views/index.erb
+++ b/views/index.erb
@@ -516,7 +516,7 @@
       <td></td>
     </tr>
 
-    <form method="POST" action="example.cgi" onSubmit="return check()">
+    <form method="送信されました" onSubmit="return check()">
     <p>名前<br>
        <input type="text" name="name"></p>
     <p><input type="submit" value="送信"></p>
