--- a/views/index.erb
+++ b/views/index.erb
@@ -516,7 +516,7 @@
       <td></td>
     </tr>
 
-    <form method='送信されました' action='あ' onSubmit="return check()">
+    <form form method="POST" action="example.cgi" onSubmit="return check()">
     <p>名前<br>
        <input type="text" name="name"></p>
     <p><input type="submit" value="送信"></p>
