--- a/views/index.erb
+++ b/views/index.erb
@@ -518,7 +518,7 @@
 
     <form form method="POST" action="example.cgi" onSubmit="return check()">
     <p>名前<br>
-       <input type="text" name="name"></p>
+       <input type="text" name="name" required></p>
     <p><input type="submit" value="送信"></p>
     
   </table>
