--- a/views/index.erb
+++ b/views/index.erb
@@ -38,7 +38,7 @@
   </select>
 
   <table id="data" class="table" border="1">
-    <tr>
+    <tr bgcolor="#FFD5EC">
       <th></th>
       <th>10-11</th>
       <th>11-12</th>
@@ -54,7 +54,7 @@
       <th>21-22</th>
     </tr>
     <tr>
-      <td>1</td>
+      <td bgcolor="#FFD5EC">1</td>
       <td></td>
       <td></td>
       <td></td>
@@ -69,7 +69,7 @@
       <td></td>
     </tr>
     <tr>
-      <td>2</td>
+      <td bgcolor="#FFD5EC">2</td>
       <td></td>
       <td></td>
       <td></td>
@@ -84,7 +84,7 @@
       <td></td>
     </tr>
     <tr>
-      <td>3</td>
+      <td bgcolor="#FFD5EC">3</td>
       <td></td>
       <td></td>
       <td></td>
@@ -99,7 +99,7 @@
       <td></td>
     </tr>
     <tr>
-      <td>4</td>
+      <td bgcolor="#FFD5EC">4</td>
       <td></td>
       <td></td>
       <td></td>
@@ -114,7 +114,7 @@
       <td></td>
     </tr>
     <tr>
-      <td>5</td>
+      <td bgcolor="#FFD5EC">5</td>
       <td></td>
       <td></td>
       <td></td>
@@ -129,7 +129,7 @@
       <td></td>
     </tr>
     <tr>
-      <td>6</td>
+      <td bgcolor="#FFD5EC">6</td>
       <td></td>
       <td></td>
       <td></td>
@@ -144,7 +144,7 @@
       <td></td>
     </tr>
     <tr>
-      <td>7</td>
+      <td bgcolor="#FFD5EC">7</td>
       <td></td>
       <td></td>
       <td></td>
@@ -159,7 +159,7 @@
       <td></td>
     </tr>
     <tr>
-      <td>8</td>
+      <td bgcolor="#FFD5EC">8</td>
       <td></td>
       <td></td>
       <td></td>
@@ -174,7 +174,7 @@
       <td></td>
     </tr>
     <tr>
-      <td>9</td>
+      <td bgcolor="#FFD5EC">9</td>
       <td></td>
       <td></td>
       <td></td>
@@ -189,7 +189,7 @@
       <td></td>
     </tr>
     <tr>
-      <td>10</td>
+      <td bgcolor="#FFD5EC">10</td>
       <td></td>
       <td></td>
       <td></td>
@@ -204,7 +204,7 @@
       <td></td>
     </tr>
     <tr>
-      <td>11</td>
+      <td bgcolor="#FFD5EC">11</td>
       <td></td>
       <td></td>
       <td></td>
@@ -219,7 +219,7 @@
       <td></td>
     </tr>
     <tr>
-      <td>12</td>
+      <td bgcolor="#FFD5EC">12</td>
       <td></td>
       <td></td>
       <td></td>
@@ -234,7 +234,7 @@
       <td></td>
     </tr>
     <tr>
-      <td>13</td>
+      <td bgcolor="#FFD5EC">13</td>
       <td></td>
       <td></td>
       <td></td>
@@ -249,7 +249,7 @@
       <td></td>
     </tr>
     <tr>
-      <td>14</td>
+      <td bgcolor="#FFD5EC">14</td>
       <td></td>
       <td></td>
       <td></td>
@@ -264,7 +264,7 @@
       <td></td>
     </tr>
     <tr>
-      <td>15</td>
+      <td bgcolor="#FFD5EC">15</td>
       <td></td>
       <td></td>
       <td></td>
@@ -279,7 +279,7 @@
       <td></td>
     </tr>
     <tr>
-      <td>16</td>
+      <td bgcolor="#FFD5EC">16</td>
       <td></td>
       <td></td>
       <td></td>
@@ -294,7 +294,7 @@
       <td></td>
     </tr>
     <tr>
-      <td>17</td>
+      <td bgcolor="#FFD5EC">17</td>
       <td></td>
       <td></td>
       <td></td>
@@ -309,7 +309,7 @@
       <td></td>
     </tr>
     <tr>
-      <td>18</td>
+      <td bgcolor="#FFD5EC">18</td>
       <td></td>
       <td></td>
       <td></td>
@@ -324,7 +324,7 @@
       <td></td>
     </tr>
     <tr>
-      <td>19</td>
+      <td bgcolor="#FFD5EC">19</td>
       <td></td>
       <td></td>
       <td></td>
@@ -339,7 +339,7 @@
       <td></td>
     </tr>
     <tr>
-      <td>20</td>
+      <td bgcolor="#FFD5EC">20</td>
       <td></td>
       <td></td>
       <td></td>
@@ -354,7 +354,7 @@
       <td></td>
     </tr>
     <tr>
-      <td>21</td>
+      <td bgcolor="#FFD5EC">21</td>
       <td></td>
       <td></td>
       <td></td>
@@ -369,7 +369,7 @@
       <td></td>
     </tr>
     <tr>
-      <td>22</td>
+      <td bgcolor="#FFD5EC">22</td>
       <td></td>
       <td></td>
       <td></td>
@@ -384,7 +384,7 @@
       <td></td>
     </tr>
     <tr>
-      <td>23</td>
+      <td bgcolor="#FFD5EC">23</td>
       <td></td>
       <td></td>
       <td></td>
@@ -399,7 +399,7 @@
       <td></td>
     </tr>
     <tr>
-      <td>24</td>
+      <td bgcolor="#FFD5EC">24</td>
       <td></td>
       <td></td>
       <td></td>
@@ -414,7 +414,7 @@
       <td></td>
     </tr>
     <tr>
-      <td>25</td>
+      <td bgcolor="#FFD5EC">25</td>
       <td></td>
       <td></td>
       <td></td>
@@ -429,7 +429,7 @@
       <td></td>
     </tr>
     <tr>
-      <td>26</td>
+      <td bgcolor="#FFD5EC">26</td>
       <td></td>
       <td></td>
       <td></td>
@@ -444,21 +444,7 @@
       <td></td>
     </tr>
     <tr>
-      <td>27</td><td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-    </tr>
-    <tr>
-      <td>28</td>
+      <td bgcolor="#FFD5EC">27</td>
       <td></td>
       <td></td>
       <td></td>
@@ -473,7 +459,7 @@
       <td></td>
     </tr>
     <tr>
-      <td>29</td>
+      <td bgcolor="#FFD5EC">28</td>
       <td></td>
       <td></td>
       <td></td>
@@ -488,7 +474,8 @@
       <td></td>
     </tr>
     <tr>
-      <td>30</td><td></td>
+      <td bgcolor="#FFD5EC">29</td>
+      <td></td>
       <td></td>
       <td></td>
       <td></td>
@@ -502,7 +489,23 @@
       <td></td>
     </tr>
     <tr>
-      <td>31</td><td></td>
+      <td bgcolor="#FFD5EC">30</td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+    </tr>
+    <tr>
+      <td bgcolor="#FFD5EC">31</td>
+      <td></td>
       <td></td>
       <td></td>
       <td></td>
