--- a/views/index.erb
+++ b/views/index.erb
@@ -2,23 +2,24 @@
   
 <head>
   <meta charset="utf-8">
-  <title>シフト申告書
-    <font face="sans-serif">
-    </font>
-  </title>
+  <title>シフト申告書</title>
 </head>
 
 <body>
  
-  <h1>シフト申告書</h1>
+  <h1>シフト申告書
+    <font face="sans-serif">
+    </font>
+  </h1>
 
   <style>
     .box select{
-      width: 100px;
+        width: 200px;
+        font-size: 50px;
     }
   </style>
-  <div name="box">
-  <select name="year">
+  <div class="box">
+  <select class="year">
     <option value="jan">2022年</option>
     <option value="feb">2023年</option>
     <option value="mar">2024年</option>
@@ -31,7 +32,7 @@
     <option value="oct">2031年</option>
     <option value="nov">2032年</option>
   </select>
-  <select name="month">
+  <select class="month">
     <option value="jan">1月</option>
     <option value="feb">2月</option>
     <option value="mar">3月</option>
