--- a/views/index.erb
+++ b/views/index.erb
@@ -533,7 +533,7 @@
 
     <form form method="POST" action="example.cgi" onSubmit="return check()">
     <p>名前（必須）<br>
-      <input type="text" name="name" required>
+      <input type="text" name="name" cols="4" rows="20" required>
       <font face="monospace">
       </font>
     </p>
