--- a/views/index.erb
+++ b/views/index.erb
@@ -533,7 +533,7 @@
 
     <form form method="POST" action="example.cgi" onSubmit="return check()">
     <p>名前（必須）<br>
-      <input type="text" name="name" cols="20" rows="5" required>
+      <input type="text" name="name" required>
       <font face="monospace">
       </font>
     </p>
@@ -543,7 +543,7 @@
       </font>
     </p>
     <p><input type="submit" value="送信">
-       <font face="monospace">
+       <font face="MS Pゴシック">
        </font>
     </p>
     
