--- a/views/index.erb
+++ b/views/index.erb
@@ -16,6 +16,11 @@
     .box select{
         width: 150px;
         font-size: 20px;
+	.button{
+	    width: 80px;
+	    paddng: 10px;
+	    background: #FF8856;
+	}
     }
   </style>
   <div class="box">
@@ -542,9 +547,8 @@
       <font face="monospace">
       </font>
     </p>
-    <p><input type="submit" value="送信">
-       <font face="MS Pゴシック">
-       </font>
+    <p><input type="submit" value="送信" class="button">
+  
     </p>
     
   </table>
