--- a/views/index.erb
+++ b/views/index.erb
@@ -17,8 +17,8 @@
         width: 150px;
         font-size: 20px;
 	.button{
-	    width: 80px;
-	    paddng: 10px;
+	    width: 300px;
+	    paddng: 20px;
 	    background: #FF8856;
 	}
     }
@@ -547,9 +547,7 @@
       <font face="monospace">
       </font>
     </p>
-    <p><input type="submit" value="送信" class="button">
-  
-    </p>
+    <p><input type="submit" value="送信" class="button"></p>
     
   </table>
 
