--- a/views/index.erb
+++ b/views/index.erb
@@ -16,9 +16,9 @@
     .box select{
         width: 150px;
         font-size: 20px;
-	.button{
+	.button input{
 	    width: 300px;
-	    paddng: 20px;
+	    padding: 20px;
 	    background: #FF8856;
 	}
     }
