--- a/views/index.erb
+++ b/views/index.erb
@@ -8,8 +8,7 @@
 <body>
  
   <h1>シフト申告書
-    <font face="monospace">
-    </font>
+    <font-family:"monospace">
   </h1>
 
   <style>
@@ -534,8 +533,7 @@
     <form form method="POST" action="example.cgi" onSubmit="return check()">
     <p>名前（必須）<br>
       <input type="text" name="name" required>
-      <font face="sans-serif">
-      </font>
+      <font-family:"sans-serif">
     </p>
     <p>備考欄<br>
       <textarea name="comment" cols="40" rows="10"></textarea>
