--- a/views/index.erb
+++ b/views/index.erb
@@ -3,24 +3,25 @@
 <head>
   <meta charset="utf-8">
   <title>シフト申告書</title>
+  <style>
+    .box select{
+        width: 150px;
+        font-size: 20px;
+    }
+    .ex1 input{
+	width: 200px;
+    }
+    input,textarea{
+	background-color:#D7EEFF;
+    }
+  </style>
 </head>
 
 <body>
  
   <h1>シフト申告書</h1>
 
-  <style>
-    .box select{
-        width: 150px;
-        font-size: 20px;
-    }
-    input.ex1{
-	width: 200px;
-    }
-    input,textarea{
-	bgColor:#D7EEFF;
-    }
-  </style>
+  
   
   <div class="box">
     
