--- a/views/index.erb
+++ b/views/index.erb
@@ -9,10 +9,13 @@
         font-size: 20px;
     }
     .ex1 input{
-	width: 200px;
+	width: 120px;
     }
     input,textarea{
 	background-color:#D7EEFF;
+    }
+    .ex3 input{
+	border-radius: 0%;
     }
   </style>
 </head>
@@ -546,7 +549,7 @@
       <textarea name="comment" cols="40" rows="10" class="ex2"></textarea>
     </p>
     <p>
-      <input type="submit" value="送信">
+      <input type="submit" value="送信" class="ex3">
     </p>
     
   </table>
