--- a/views/index.erb
+++ b/views/index.erb
@@ -13,9 +13,10 @@
     }
     input,textarea{
 	background-color:#D7EEFF;
+	outline: 1px #D7EEFF solid;
     }
     .ex3 input{
-	border-radius: 0%;
+	border-radius: 100vh;
     }
   </style>
 </head>
