--- a/views/index.erb
+++ b/views/index.erb
@@ -15,8 +15,8 @@
 	background-color:#D7EEFF;
 	outline: 1px #D7EEFF solid;
     }
-    .ex3 input{
-	border-radius: 100vh;
+    .ex3 {
+        border: 3px solid #BAD3FF;
     }
   </style>
 </head>
