--- a/views/index.erb
+++ b/views/index.erb
@@ -8,15 +8,18 @@
         width: 150px;
         font-size: 20px;
     }
-    .ex1 input{
-	width: 120px;
+    .ex1 {
+        width: 120px;
+        background-color:#D7EEFF;
+	border: 2px solid #DDDDDD;
     }
-    input,textarea{
-	background-color:#D7EEFF;
-	outline: 1px #D7EEFF solid;
+    textarea {
+        background-color:#D7EEFF;
+        border: 2px solid #DDDDDD;
     }
     .ex3 {
-        border: 3px solid #BAD3FF;
+        background-color:#8EB8FF;
+        border: 3px double #BAD3FF;
     }
   </style>
 </head>
