--- a/views/index.erb
+++ b/views/index.erb
@@ -9,7 +9,7 @@
         font-size: 20px;
     }
     .ex1 {
-        width: 120px;
+        width: 150px;
         background-color:#D7EEFF;
 	border: 2px solid #DDDDDD;
     }
@@ -19,7 +19,8 @@
     }
     .ex3 {
         background-color:#8EB8FF;
-        border: 3px double #BAD3FF;
+        width: 80px;
+	height: 30px;
     }
   </style>
 </head>
