--- a/views/index.erb
+++ b/views/index.erb
@@ -19,8 +19,9 @@
     }
     .ex3 {
         background-color:#8EB8FF;
-        width: 80px;
-	height: 30px;
+        border: 2px solid #8EB8FF;
+	width: 90px;
+	height: 50px;
     }
   </style>
 </head>
@@ -63,7 +64,7 @@
   
   </div>
 
-  <table id="data" class="table" border="1" >]
+  <table id="data" class="table" border="1" >
     
     <tr bgcolor="#FFD5EC">
       <th></th>
