--- a/views/index.erb
+++ b/views/index.erb
@@ -11,7 +11,7 @@
     .ex1 {
         width: 150px;
         background-color:#D7EEFF;
-	border: 2px solid #DDDDDD;
+        border: 2px solid #DDDDDD;
     }
     textarea {
         background-color:#D7EEFF;
@@ -20,8 +20,9 @@
     .ex3 {
         background-color:#8EB8FF;
         border: 2px solid #8EB8FF;
-	width: 90px;
-	height: 50px;
+        border-radius: 30px;
+        width: 90px;
+        height: 50px;
     }
   </style>
 </head>
