--- a/views/index.erb
+++ b/views/index.erb
@@ -12,12 +12,14 @@
         width: 150px;
         background-color:#D7EEFF;
         border: 2px solid #DDDDDD;
-	font-size: 20px;
+        font-size: 20px;
+       // font-weight: 600;
     }
     textarea {
         background-color:#D7EEFF;
         border: 2px solid #DDDDDD;
-	font-size: 20px;
+        font-size: 20px;
+       // font-weight: 600;
     }
     .ex3 {
         background-color:#8EB8FF;
@@ -26,6 +28,7 @@
         width: 90px;
         height: 50px;
         font-size: 20px;
+        font-weight: 800;
     }
   </style>
 </head>
@@ -553,10 +556,10 @@
 
     <form form method="POST" action="example.cgi" onSubmit="return check()">
     <p>名前（必須）<br>
-      <input type="text" name="name" size="50" class="ex1" required>
+      <input type="text" name="name" size="50" font-weight="600" class="ex1" required>
     </p>
     <p>備考欄<br>
-      <textarea name="comment" cols="40" rows="10" class="ex2"></textarea>
+      <textarea name="comment" class="ex2"></textarea>
     </p>
     <p>
       <input type="submit" value="送信" class="ex3">
