--- a/views/index.erb
+++ b/views/index.erb
@@ -25,7 +25,7 @@
         border-radius: 30px;
         width: 90px;
         height: 50px;
-        font-size: 20px;
+        font-size: 30px;
         font-weight: 800;
     }
   </style>
@@ -553,13 +553,13 @@
     </tr>
 
     <form form method="POST" action="example.cgi" onSubmit="return check()">
-      <p><font size="4" font-weight="600">名前（必須）<br>
+      <p><font size="7">名前（必須）<br>
       <input type="text" name="name" size="50" class="ex1" required>
     </p>
-    <p><font size="4" font-weight="600">備考欄<br>
+    <p><font size="4">備考欄<br>
       <textarea name="comment" cols="40" rows="10" class="ex2"></textarea>
     </p>
-    <p><font size="5">
+    <p>
       <input type="submit" value="送信" class="ex3">
     </p>
     
