--- a/views/index.erb
+++ b/views/index.erb
@@ -25,8 +25,9 @@
         border-radius: 30px;
         width: 90px;
         height: 50px;
-        font-size: 30px;
-        font-weight: 800;
+        font-size: 25px;
+        font-weight: 700;
+	font-color:#FFFFFF
     }
   </style>
 </head>
@@ -553,7 +554,7 @@
     </tr>
 
     <form form method="POST" action="example.cgi" onSubmit="return check()">
-      <p><font size="7">名前（必須）<br>
+      <p><font size="4">名前（必須）<br>
       <input type="text" name="name" size="50" class="ex1" required>
     </p>
     <p><font size="4">備考欄<br>
