--- a/views/index.erb
+++ b/views/index.erb
@@ -27,7 +27,7 @@
         height: 50px;
         font-size: 25px;
         font-weight: 700;
-	font-color:#FFFFFF
+	color:#FFFFFF;
     }
   </style>
 </head>
