--- a/views/index.erb
+++ b/views/index.erb
@@ -27,7 +27,7 @@
         height: 50px;
         font-size: 25px;
         font-weight: 500;
-	color:#FFFFFF;
+        color:#FFFFFF;
     }
   </style>
 </head>
@@ -554,7 +554,7 @@
     </tr>
 
     <form form method="POST" action="example.cgi" onSubmit="return check()">
-      <p><font size="4">名前（必須）<br>
+    <p><font size="4">名前（必須）<br>
       <input type="text" name="name" size="50" class="ex1" required>
     </p>
     <p><font size="4">備考欄<br>
@@ -563,6 +563,9 @@
     <p>
       <input type="submit" value="送信" class="ex3">
     </p>
+    
+    <p>＊希望する時間帯を全て選択してください</p>
+      
     
   </table>
 
