--- a/views/index.erb
+++ b/views/index.erb
@@ -560,14 +560,13 @@
     <p><font size="4">備考欄<br>
       <textarea name="comment" cols="40" rows="10" class="ex2"></textarea>
     </p>
-    <p>
-      <input type="submit" value="送信" class="ex3">
-    </p>
-    
+    <p></p>
+    <p></p>
     <p>＊希望する時間帯を全て選択してください</p>
-      
     
   </table>
+  <p></p>
+  <p><input type="submit" value="送信" class="ex3"></p>
 
   <script type="text/javascript">
     var data = document.getElementById("data");
