--- a/views/index.erb
+++ b/views/index.erb
@@ -2,7 +2,7 @@
   
 <head>
   <meta charset="utf-8">
-  <title>シフト申告書</title>
+  <title>シフト申告書</title><br><br>
   <style>
     .box select{
         width: 150px;
@@ -560,12 +560,11 @@
     <p><font size="4">備考欄<br>
       <textarea name="comment" cols="40" rows="10" class="ex2"></textarea>
     </p>
-    <p></p>
-    <p></p>
+    <br><br>
     <p>＊希望する時間帯を全て選択してください</p>
     
   </table>
-  <p></p>
+  <br><br>
   <p><input type="submit" value="送信" class="ex3"></p>
 
   <script type="text/javascript">
