--- a/views/index.erb
+++ b/views/index.erb
@@ -2,7 +2,7 @@
   
 <head>
   <meta charset="utf-8">
-  <title>シフト申告書</title><br><br>
+  <title>シフト申告書</title>
   <style>
     .box select{
         width: 150px;
@@ -34,7 +34,7 @@
 
 <body>
  
-  <h1>シフト申告書</h1>
+  <h1>シフト申告書</h1><br><br>
 
   
   
@@ -560,7 +560,7 @@
     <p><font size="4">備考欄<br>
       <textarea name="comment" cols="40" rows="10" class="ex2"></textarea>
     </p>
-    <br><br>
+    <br>
     <p>＊希望する時間帯を全て選択してください</p>
     
   </table>
