--- a/views/index.erb
+++ b/views/index.erb
@@ -2,7 +2,7 @@
   
 <head>
   <meta charset="utf-8">
-  <title>シフト申告書</title>
+  <title>シフト申告書</title><br>
   <style>
     .box select{
         width: 150px;
@@ -34,9 +34,7 @@
 
 <body>
  
-  <h1>シフト申告書</h1><br><br>
-
-  
+  <h1>シフト申告書</h1><br>
   
   <div class="box">
     
