--- a/views/index.erb
+++ b/views/index.erb
@@ -563,7 +563,7 @@
     
   </table>
   <br><br>
-  <p><input type="submit" value="送信" class="ex3"></p>
+  <p><input type="submit" value="送信" class="ex3"></p><br><br><br><br>
 
   <script type="text/javascript">
     var data = document.getElementById("data");
