--- a/views/index.erb
+++ b/views/index.erb
@@ -551,7 +551,7 @@
 	<td></td>
       </tr>
 
-      <form form method="POST" action="/recive" onSubmit="return check()">
+      <form form method="POST" action="/recieve" onSubmit="return check()">
 	<p><font size="4">名前（必須）<br>
 	    <input type="text" name="name" size="50" class="ex1" required>
 	</p>
