--- a/views/index.erb
+++ b/views/index.erb
@@ -68,7 +68,7 @@
       
     </div>
 
-    <table id="data" class="table" border="1" >
+    <table id="data" class="table1" border="1" >
       
       <tr bgcolor="#FFD5EC">
 	<th></th>
